# SZ2pdf

./: .gitignore  LICENSE  README.md  SZ2pdf.py  conf_utils.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: conf_utils.py  output_utils.py
