[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "SZ2pdf"
version = "0.2.1"
authors = [
    { name = "Simon Kreuzer", email = "mail@monsi.org" }
]
description = "This tool downloads the current newspaper as pdf from the \"Sueddeutsche Zeitung\" using your login credentials."
readme = "README.md"

requires-python = ">=3.5"
